Account/MyOrg/ViewApplicant: Fix all spacing / styling details. Use dialogs. Replace ViewApplicantButton with css class.

--- a/client/account.css
+++ b/client/account.css
@@ -73,14 +73,38 @@
 }
 .acct-btn {
   background-color: #f2f2f2 !important;
-  margin: 6px 0;
-}
-.acct-btn .btn__content {
   text-transform: none;
-  color: #b0b0b0;
+  border: 1px solid black;
+  margin: 0;
+}
+.acct-header {
+  padding-bottom: 8px;
+  margin: 0;
+}
+.acct-counters {
+  padding-bottom: 20px; /* to match acct-header visually */
+  margin: 0;
+}
+.acct-icon {
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 5px;
+  margin-bottom: 8px;
+  width: 18px;
+  height: 18px;
+/*  margin: 0 5px 7px 0; */
 }
 .acct-h3 {
+  display: inline-block;
   color: #191919;
+}
+.profile-pic-cont {
+  z-index: 1;
+}
+@media only screen and (min-width: 768px) and (orientation: landscape) {
+  .right-account-column {
+    text-align: right;
+  }
 }
 .acct-list .list__tile {
   background-color: #f2f2f2;
